--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <button class="btn"></button>
+    <button class="btn">click me</button>
 </body>
 </html>
