--- a/index.html
+++ b/index.html
@@ -1,12 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <button class="btn">click me</button>
-</body>
-</html>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Document</title>
+        <link rel="stylesheet" href="css/style.css">
+   </head>
+        <body>
+             <div class="wrap">
+                 <div class="header">
+                     <div class="container">
+                          <div class="header__content">
+                              <div class="header__seed">
+                                  <div class="header__Travelulu">Travelulu</div>
+                                  <div class="header__image">
+                                      <img class="image" src="img/Menu.svg" alt="">
+                                  </div>
+                              </div>
+                          </div>
+                     </div>
+                 </div>
+             </div>
+       </body>
+   </html>
